fix: adjust h3-light margin and gap in about container

--- a/shelter/style.css
+++ b/shelter/style.css
@@ -223,7 +223,7 @@ header {
 }
 
 .h3-light {
-	margin: 50px 0 25px;
+	margin: 39px 0 25px;
 	font-family: Georgia;
 	font-size: 35px;
 	font-weight: 400;
@@ -280,10 +280,11 @@ header {
 	display: flex;
 	flex-wrap: nowrap;
 	justify-content: center;
-	gap: 115px;
+	gap: 113px;
 }
 
 .about-content {
+	padding-top: 11px;
 	width: 430px;
 }
 
